# template-c--20

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  03-feature-request.yml
app/: CMakeLists.txt
app/my-app/: CMakeLists.txt
app/my-app/include/: my-app.hpp
app/my-app/src/: main.cpp
app/my-tool/: CMakeLists.txt
app/my-tool/src/: main.cpp
docs/: SECURITY.md  TRIAGE.md
libs/: CMakeLists.txt
libs/libanother/: CMakeLists.txt
libs/libsomething/: CMakeLists.txt
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt
tests/app/my-app/: CMakeLists.txt  test_main.cpp
tests/app/my-tool/: CMakeLists.txt  main_test.cpp
tests/libs/: CMakeLists.txt
tests/libs/libanother/: CMakeLists.txt
tests/libs/libsomething/: CMakeLists.txt
